--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animations: ^2.0.11
+  camera: ^0.10.6
   cupertino_icons: ^1.0.6
+  dotted_border: ^2.1.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
+  google_mlkit_face_detection: ^0.11.0
   intl: ^0.19.0
   riverpod_annotation: ^2.3.5
 
