--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.4.1
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
   google_mlkit_face_detection: ^0.11.0
@@ -83,3 +84,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#E43E3A"
+  image: "assets/images/splash_icon.png"
+  android_12:
+    color: "#E43E3A"
+    icon_background_color: "#E43E3A"
+    image: "assets/images/splash_icon.png"
