--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   dotted_border: ^2.1.0
   flutter:
     sdk: flutter
+  flutter_background_service: ^5.0.6
+  flutter_local_notifications: ^17.2.1+1
   flutter_native_splash: ^2.4.1
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
   google_mlkit_face_detection: ^0.11.0
   intl: ^0.19.0
   riverpod_annotation: ^2.3.5
+  web_socket_channel: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -84,7 +87,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
 flutter_native_splash:
   color: "#E43E3A"
   image: "assets/images/splash_icon.png"
