--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
+  google_fonts: ^6.2.1
   google_mlkit_face_detection: ^0.11.0
   intl: ^0.19.0
   riverpod_annotation: ^2.3.5
@@ -77,16 +78,17 @@ flutter:
     - family: SmartAttendIcons
       fonts:
         - asset: assets/fonts/SmartAttendIcons.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    - family: Segoe UI
+      fonts:
+        - asset: "assets/fonts/Segoe UI.ttf"
+        - asset: "assets/fonts/Segoe UI Bold.ttf"
+          weight: 700
+        - asset: "assets/fonts/Segoe UI Italic.ttf"
+          style: italic
+        - asset: "assets/fonts/Segoe UI Bold Italic.ttf"
+          weight: 700
+          style: italic
+
 flutter_native_splash:
   color: "#E43E3A"
   image: "assets/images/splash_icon.png"
