--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
     sdk: flutter
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -96,3 +97,9 @@ flutter_native_splash:
     color: "#E43E3A"
     icon_background_color: "#E43E3A"
     image: "assets/images/splash_icon.png"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
